--- a/FNSProject/templates/base.html
+++ b/FNSProject/templates/base.html
@@ -68,6 +68,7 @@
     <script src="{% static 'js/home.js' %}" type="text/javascript"></script>
     <script src="{% static 'account/js/register.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/notification.js' %}" type="text/javascript"></script>
+    <script type="text/javascript" src="{% static 'js/payment.js' %}"></script>
 
     <script type="text/javascript">
         // 점수입력시 득점 이상으로 득점자를 선택할 수 없게 하는 함수
