--- a/reservation/templates/reservation/playground.html
+++ b/reservation/templates/reservation/playground.html
@@ -35,7 +35,7 @@
 </span>
 <div id="playground">
     <div>
-        <img src="https://footballlover.s3.ap-northeast-2.amazonaws.com/media/{{playground.playgorundPhoto}}" alt="" style="width:100%;">
+        <img src="https://footballlover.s3.ap-northeast-2.amazonaws.com/media/{{playground.playgroundPhoto}}" alt="" style="width:100%;">
     </div>
     <div class="Pname">
         <p>
