--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -703,6 +703,7 @@ alert("{{res_data.error}}");
                 <option value="부산광역시">부산광역시</option>
                 <option value="울산광역시">울산광역시</option>
                 <option value="세종특별자치시">세종특별자치시</option>
+                <option value="강원도">강원도</option>
                 <option value="경기도">경기도</option>
                 <option value="충청북도">충청북도</option>
                 <option value="충청남도">충청남도</option>
@@ -832,6 +833,27 @@ alert("{{res_data.error}}");
                 <option value="보람동">보람동</option>
                 <option value="대평동">대평동</option>
                 <option value="소담동">소담동</option>
+            </select>
+            <select id="gangwon" class="form-control" name = "gangwon"  style="display: none; width:50%;">
+                <option selected disabled hidden value="gangwon">시군구</option>
+                <option value="강릉시">강릉시</option>
+                <option value="고성군">고성군</option>
+                <option value="동해시">동해시</option>
+                <option value="삼척시">삼척시</option>
+                <option value="속초시">속초시</option>
+                <option value="양구군">양구군</option>
+                <option value="양양군">양양군</option>
+                <option value="영월군">영월군</option>
+                <option value="원주시">원주시</option>
+                <option value="인제군">인제군</option>
+                <option value="정선군">정선군</option>
+                <option value="철원군">철원군</option>
+                <option value="춘천시">춘천시</option>
+                <option value="태백시">태백시</option>
+                <option value="평창군">평창군</option>
+                <option value="홍천군">홍천군</option>
+                <option value="화천군">화천군</option>
+                <option value="횡성군">횡성군</option>
             </select>
             <select id="gyeonggi" class="form-control" name = "gyeonggi"  style="display: none; width:50%;">
                 <option selected disabled hidden value="gyeonggi">시군구</option>
